@@ -1,7 +1,9 @@
 package club.p6e.coat.auth.token;
 
 import org.springframework.http.HttpCookie;
+import org.springframework.http.ResponseCookie;
 import org.springframework.http.server.reactive.ServerHttpRequest;
+import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.util.MultiValueMap;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
@@ -39,15 +41,19 @@ public class ReactiveCookieCacheTokenCleaner implements ReactiveTokenCleaner {
     }
 
     @Override
-    public Mono<Object> execute(ServerWebExchange context) {
-        final ServerHttpRequest request = context.getRequest();
+    public Mono<Object> execute(ServerWebExchange exchange) {
+        final ServerHttpRequest request = exchange.getRequest();
+        final ServerHttpResponse response = exchange.getResponse();
         final MultiValueMap<String, HttpCookie> cookies = request.getCookies();
         if (!cookies.isEmpty()) {
+            final List<HttpCookie> list = new ArrayList<>();
             for (final String key : cookies.keySet()) {
                 if (AUTH_COOKIE_NAME.equalsIgnoreCase(key)) {
-                    return execute(new ArrayList<>(cookies.get(key))).map(k -> LocalDateTime.now());
+                    list.addAll(cookies.get(key));
+                    response.addCookie(cookie(key, ""));
                 }
             }
+            return execute(list).switchIfEmpty(Mono.just("")).map(_ -> LocalDateTime.now());
         }
         return Mono.just(LocalDateTime.now());
     }
@@ -62,9 +68,20 @@ public class ReactiveCookieCacheTokenCleaner implements ReactiveTokenCleaner {
         if (list == null || list.isEmpty()) {
             return Mono.empty();
         } else {
-            final HttpCookie cookie = list.remove(0);
+            final HttpCookie cookie = list.removeFirst();
             return cookie == null ? execute(list) : this.cache.getToken(cookie.getValue()).flatMap(m -> this.cache.cleanToken(m.getToken())).map(ReactiveUserTokenCache.Model::getToken).switchIfEmpty(execute(list));
         }
+    }
+
+    /**
+     * Cookie
+     *
+     * @param name    Cookie Name
+     * @param content Cookie Content
+     * @return Response Cookie Object
+     */
+    public ResponseCookie cookie(String name, String content) {
+        return ResponseCookie.from(name, content).path("/").maxAge(0).httpOnly(true).build();
     }
 
 }
